# myopengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  peru.yaml
Tools/: embed.c  embed.cpp  embed.h  stbi_DDS.h
Tutorials/common/: controls.cpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
Tutorials/quick_glfw/: CMakeLists.txt  quick_glfw.cpp
Tutorials/tutorial01_first_window/: CMakeLists.txt  tutorial01.cpp
Tutorials/tutorial02_red_triangle/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  embedded_data.cpp  tutorial02.cpp
Tutorials/tutorial03_matrices/: CMakeLists.txt  tutorial03.cpp
Tutorials/tutorial04_colored_cube/: CMakeLists.txt  tutorial04.cpp
Tutorials/tutorial05_textured_cube/: CMakeLists.txt  tutorial05.cpp
Tutorials/tutorial06_keyboard_and_mouse/: CMakeLists.txt  tutorial06.cpp
Tutorials/tutorial07_model_loading/: .gitignore  CMakeLists.txt  tutorial07.cpp
